--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SDGP MASS</title>
 </head>
 <body>
     <h1>
-        Title
+        Rahuman mass
     </h1>
 </body>
 </html>
