--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
         Title
     </h1>
  
-    <p>shahma loves zaki</p>
-    <p>zaki loves shahma</p>
-
+    <h3>abdul rahman</h3>
 
     <h3>
         Zakiiii
