--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SDGP MASS</title>
+    <title>SDGP </title>
 </head>
 <body>
     <h1>
         Rahuman mass
     </h1>
+     <h3>
+        Kausian da naan
+    </h3>
+
 </body>
 </html>
