--- a/index.html
+++ b/index.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>
-        Title
-    </h1>
-
-
-    <h3>
-        Zakiiii
-    </h3>
-
+    <h1>Title</h1>
+    <h3>Zakiiii</h3>
 </body>
 </html>
